  (Vincent Ladeuil, #401599)

* Fixed ``AssertionError`` when accessing smart servers running Bazaar
  versions before 1.6.
  (Andrew Bennetts, #528041)

* Heavyweight checkout operation now shows a message to the user indicating
  history is being copied.
  (Parth Malwankar, #538868)

* Reduce peak memory by one copy of compressed text.
  (John Arbash Meinel, #566940)

* Show the filenames when a file rename fails so that the error will be
  more comprehensible.
  (Martin Pool, #491763)

* Unicode characters in aliases are now handled correctly and do not cause
  UnicodeEncodeError exception. (Parth Malwankar, #529930)

* Unicode commit messages that are the same as a file name no longer cause
  UnicodeEncodeError. ``ui.text.show_warning`` now handles unicode
  messages.
  (Parth Malwankar, #563646)

* Using bzr with `lp:` urls behind an http proxy should work.
  (Robert Collins, #558343)

Improvements
************

* ``append_revisions_only`` will now be interpreted as a boolean and a
  warning emitted if illegal values are used. Note that for projects
  that needs to maintain compatibility with previsous bzr versions,
  only 'True' and 'False' strings must be used (previous versions of
  bzr will interpret all strings differing from 'True'
  (case-sensitive) as false.
  (Brian de Alwis, Vincent Ladeuil)

* ``bzr ls`` now supports short options for existing long options.
  ``-k/--kind``, ``-i/--ignored``, ``-u/--unknown`` and ``-0/--null``.
  (Parth Malwankar, #181124)

* ``Config.get_user_option_as_bool`` will now warn if a value cannot
  be interpreted as a boolean.
  (Vincent Ladeuil)

Documentation
*************

API Changes
***********

* Added ``bzrlib.merge.PerFileMerger``, a more convenient way to write
  some kinds of ``merge_file_content`` hook functions.
  (Andrew Bennetts)
  
* `BzrDir`, `Branch`, `Repository` and `WorkingTree` now all support `user_url`,
  `user_transport`, `control_url` and `control_transport` members pointing